# dr-koala

./: .dockerignore  .env.example  .env.prod.example  .gitignore  .markdownlint.json  .prototools  Dockerfile  Dockerfile.dev  Makefile  README.md  docker-compose.api.yml  docker-compose.db.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
.cursor/rules/: clean-arch.mdc  dr-koala.mdc  frontend.mdc  react-query-document-guide.mdc  remark.mdc
.github/workflows/: build-and-push-images.yml
app/: autogen_example.py  main.py
app/api/http/: __init__.py
app/config/: settings.py
app/core/constant/: agent_configs.toml
app/core/enum/: agent.py  conversation.py
app/core/model/: session.py  (+1 more)
app/service/: agent.py  agent_service.py  agent_task_manager.py  session.py
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  README.md  biome.json  docker-compose.client.yml  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json
frontend/components/: AgentSteps.tsx  AppContainer.tsx  ChatInput.tsx  MainSidebar.tsx  MarkdownRenderer.tsx  SVG.tsx  SimpleConfirmDialog.tsx  UserAgreementDialog.tsx
frontend/constants/: api.ts  cookie.ts
frontend/hooks/: useAgentStream.ts  useAskAgent.ts  useCreateSession.ts  useDeleteSession.ts  useIsMobile.ts  useTopicSession.ts  useTopicSessionWithStreaming.ts  useTopicSessions.ts
frontend/pages/: _app.tsx  index.tsx
frontend/styles/: globals.css
frontend/types/: api.ts  apiSchema.d.ts  conversation.ts  topicSession.ts
frontend/utils/: fetch.ts
scripts/: init_db_pg.sh
(+32 files in other folders)
